<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mint">

    <!-- Top Bar -->
    <LinearLayout
        android:id="@+id/topBar"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/darkTeal"
        android:padding="8dp"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/txtScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scoreCount"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/txtGameName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gameName"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="24sp"
            android:layout_weight="1"
            android:gravity="center"/>

        <TextView
            android:id="@+id/txtDamage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/damageCount"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:layout_weight="1"
            android:gravity="end"/>

    </LinearLayout>

    <!-- Custom Game Area -->
    <com.example.timesx.GameView
        android:id="@+id/gameView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/topBar"
        tools:ignore="MissingClass" />

</RelativeLayout>
