<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/Blue">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="218dp"
        android:src="@drawable/login" />

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center" >
        <LinearLayout
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:background="@color/skin"
            android:outlineSpotShadowColor="@color/black"
            android:outlineAmbientShadowColor="@color/black">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:text="@string/userName"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/userName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="15dp"
                android:padding="7dp"
                android:backgroundTint="@color/offwhite"
                android:background="@color/offwhite"
                android:inputType="text"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:text="@string/password"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/passWord"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="15dp"
                android:padding="7dp"
                android:drawableEnd="@drawable/ic_visibility_off"
                android:backgroundTint="@color/offwhite"
                android:background="@color/offwhite"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/forgPass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="15dp"
                android:text="@string/forgotPass"
                android:textColor="@color/black"
                android:clickable="true"
                android:focusable="true" />

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="15dp"
                android:backgroundTint="@color/orange"
                android:text="@string/login"
                android:textColor="@color/white"
                android:onClick="login"/>


            <Button
                android:id="@+id/btnReset"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="18dp"
                android:backgroundTint="@color/orange"
                android:text="@string/reset"
                android:textColor="@color/white"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <!-- This View acts as a spacer, pushing the bottom TextView down -->
    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signup1"
            android:textSize="20sp"
            android:textColor="@color/black"/>
        <TextView
            android:id="@+id/SignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signup"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@color/orange"
            android:focusable="true"
            android:clickable="true"/>
    </LinearLayout>
</LinearLayout>