<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/Blue">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_gravity="center"
        android:text="@string/signup"
        android:textSize="50sp"
        android:textColor="@color/black"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_gravity="center"
        android:text="@string/plz_signup"
        android:textSize="18sp"
        android:textColor="@color/black" />

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">
        <LinearLayout
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/skin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:text="@string/Name"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/black" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="15dp"
                android:padding="7dp"
                android:background="@color/offwhite"
                android:backgroundTint="@color/offwhite"
                android:inputType="text"
                android:textSize="18sp"
                android:textColor="@color/black" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:text="@string/userName"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/black" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="15dp"
                android:padding="7dp"
                android:background="@color/offwhite"
                android:backgroundTint="@color/offwhite"
                android:inputType="text"
                android:textSize="18sp"
                android:textColor="@color/black" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:text="@string/password"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/black" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="15dp"
                android:padding="7dp"
                android:background="@color/offwhite"
                android:backgroundTint="@color/offwhite"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:drawableEnd="@drawable/ic_visibility_off"
                android:inputType="textPassword" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:text="@string/newpassword"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/black" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="15dp"
                android:padding="7dp"
                android:background="@color/offwhite"
                android:backgroundTint="@color/offwhite"
                android:textSize="18sp"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:drawableEnd="@drawable/ic_visibility_off" />

            <Button
                android:id="@+id/SignUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="20dp"
                android:text="@string/signup"
                android:backgroundTint="@color/orange"
                android:textColor="@color/white"
                android:focusable="true"
                android:clickable="true"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="50dp" >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/having_account"
            android:textSize="20sp"
            android:textColor="@color/black" />
        <TextView
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@color/orange"
            android:focusable="true"
            android:clickable="true" />
    </LinearLayout>

</LinearLayout>