<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/Blue">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resetPass"
        android:textStyle="bold"
        android:textSize="34sp"
        android:textColor="@color/black"
        android:layout_marginStart="30dp"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="20dp" />

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <LinearLayout
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:background="@color/skin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/password"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="@color/black" />
            <EditText
                android:id="@+id/passWord"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:padding="7dp"
                android:background="@color/offwhite"
                android:backgroundTint="@color/offwhite"
                android:drawableEnd="@drawable/ic_visibility_off"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/newpassword"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="@color/black" />
            <EditText
                android:id="@+id/confirmPassWord"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:padding="7dp"
                android:background="@color/offwhite"
                android:backgroundTint="@color/offwhite"
                android:drawableEnd="@drawable/ic_visibility_off"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textSize="18sp" />
            <Button
                android:id="@+id/resetNewPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="50dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="30dp"
                android:focusable="true"
                android:clickable="true"
                android:text="@string/reset"
                android:backgroundTint="@color/orange"
                android:textSize="18sp"
                android:textColor="@color/white" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>


</LinearLayout>